--- a/metadata.yaml
+++ b/metadata.yaml
@@ -7,6 +7,9 @@ contributor:
     deathdate: 1965
     gutenberg_agent_id: '54815'
     url: http://www.gutenberg.org/2009/agents/54815
+covers:
+- cover_type: archival
+  image_path: 68553-h/images/cover.jpg
 creator:
   author:
     agent_name: Lovecraft, H. P. (Howard Phillips)
@@ -19,6 +22,8 @@ creator:
     url: http://www.gutenberg.org/2009/agents/34724
     wikipedia: https://en.wikipedia.org/wiki/H._P._Lovecraft
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/68553#The-festival
 gutenberg_issued: '2022-07-18'
 identifiers:
   gutenberg: '68553'
